--- a/game.html
+++ b/game.html
@@ -55,9 +55,13 @@
 				<button type="button" title="Уведомления" class="header__nav__button" id="header_button_notification" onclick="open_notifications()">
 					<img src="img/icons/main/bell64.png" alt="">
 				</button>
-				<a href="basket.html" title="Корзина" class="header__nav__button">
+				<button type="button" title="Корзина" class="header__nav__buttonBasket header__nav__buttonBasket_closed" id="header_basket_button" onclick="toggle_header_basket()">
 					<img src="img/icons/main/basket64.png" alt="">
-				</a>
+					<div class="header__nav__buttonBasket__info txt">
+						<div class="header__nav__buttonBasket__info__value" id="header_basket_price">0 ₽</div>
+						<div class="header__nav__buttonBasket__info__value" id="header_basket_counter">0 Игр</div>
+					</div>
+				</button>
 			</nav>
 		</div>
         <div class="header__catalog">
@@ -233,6 +237,41 @@
             </div>
         </div>
 
+		<div class="header__basket">
+			<div class="header__basket__head txt">
+				<div class="header__basket__head__title">Корзина</div>
+				<a href="basket.html" class="header__basket__head__link">К оплате</a>
+			</div>
+			<div class="header__basket__grid" id="header_basket_grid">
+				<div class="header__basket__grid__game">
+					<div class="header__basket__grid__game__top">
+						<a href="#" class="header__basket__grid__game__title txt">Title game 3</a>
+						<div class="header__basket__grid__game__delete flex-center">
+							<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M16 8L8 16M8.00001 8L16 16" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+							</svg>
+						</div>
+					</div>
+					<div class="header__basket__grid__game__bottom">
+						<div class="header__basket__grid__game__prices txt">
+							<div class="header__basket__grid__game__prices__new">1240 ₽</div>
+							<div class="header__basket__grid__game__prices__old">1440 ₽</div>
+						</div>
+						<a href="#" class="header__basket__grid__game__bottom__link txt">
+							<span>Игра в Steam</span>
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
+                                <path style="fill:none;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;" d="M22,10h-9.5
+                                    C9.468,10,7,12.468,7,15.5v20c0,3.032,2.468,5.5,5.5,5.5h20c3.032,0,5.5-2.468,5.5-5.5V26"/>
+                                <line style="fill:none;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" x1="24" y1="24" x2="41" y2="7"/>
+                                <polyline style="fill:none;stroke-width:4;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;" points="
+                                    28,7 41,7 41,20 "/>
+                            </svg>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="header__notification">
 			<div class="header__notification__header">
 				<div class="header__notification__header__title txt">Уведомления</div>
