--- a/basket.html
+++ b/basket.html
@@ -54,6 +54,9 @@
 				</a>
 				<button type="button" title="Уведомления" class="header__nav__button" id="header_button_notification" onclick="open_notifications()">
 					<img src="img/icons/main/bell64.png" alt="">
+					<div class="header__nav__button__counter header__nav__button__counter_hidden" id="header_notification_counter">
+						<div class="header__nav__button__counter__number txt"></div>
+					</div>
 				</button>
 				<button type="button" title="Корзина" class="header__nav__buttonBasket header__nav__buttonBasket_closed" id="header_basket_button" onclick="toggle_header_basket()">
 					<img src="img/icons/main/basket64.png" alt="">
@@ -251,6 +254,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="header__notification">
 			<div class="header__notification__header">
 				<div class="header__notification__header__title txt">Уведомления</div>
@@ -287,7 +291,6 @@
 				</div> -->
 			</div>
 		</div>
-
 		<div class="header__notification_temporary header__notification_temporary" id="temporary_notification">
 			<div class="header__notification_temporary__grid" id="grid_temporary_notification">
 			</div>
@@ -605,9 +608,9 @@
 	<script type="text/javascript" src="elements/elements.js"></script>
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
-	<script type="text/javascript" src="scripts/notification.js"></script>
 	<script type="text/javascript" src="scripts/header_bg.js"></script>
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
+	<script type="text/javascript" src="scripts/notification.js"></script>
 	<script type="text/javascript" src="scripts/basket.js"></script>
 </body>
 </html>
