--- a/game.html
+++ b/game.html
@@ -33,8 +33,8 @@
 					<div class="header__searchBlock__bg__top"></div>
 					<div class="header__searchBlock__bg__bottom"></div>
 				</div> -->
-				<input type="text" title="Поиск">
-				<button class="header__searchBlock__button" title="Поиск" type="button">
+				<input type="text" title="Поиск" id="search-input">
+				<button class="header__searchBlock__button" title="Поиск" type="button" id="search-button">
 					<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 					</svg>
@@ -54,6 +54,9 @@
 				</a>
 				<button type="button" title="Уведомления" class="header__nav__button" id="header_button_notification" onclick="open_notifications()">
 					<img src="img/icons/main/bell64.png" alt="">
+					<div class="header__nav__button__counter header__nav__button__counter_hidden" id="header_notification_counter">
+						<div class="header__nav__button__counter__number txt"></div>
+					</div>
 				</button>
 				<button type="button" title="Корзина" class="header__nav__buttonBasket header__nav__buttonBasket_closed" id="header_basket_button" onclick="toggle_header_basket()">
 					<img src="img/icons/main/basket64.png" alt="">
@@ -272,6 +275,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="header__notification">
 			<div class="header__notification__header">
 				<div class="header__notification__header__title txt">Уведомления</div>
@@ -308,7 +312,6 @@
 				</div> -->
 			</div>
 		</div>
-
 		<div class="header__notification_temporary header__notification_temporary" id="temporary_notification">
 			<div class="header__notification_temporary__grid" id="grid_temporary_notification">
 			</div>
@@ -430,26 +433,30 @@
 									</div>
 									
 									<div class="videoIF__volume videoIF__volume_muted">
-										<svg class="_volume_muted" viewBox="0 -3 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-											<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-												<g sketch:type="MSLayerGroup" transform="translate(-311.000000, -573.000000)" fill="#fff">
-													<path d="M336.444,585 L340.617,580.827 C341.067,580.377 341.109,579.688 340.711,579.289 C340.312,578.891 339.623,578.933 339.173,579.383 L335,583.556 L330.827,579.383 C330.377,578.933 329.688,578.891 329.289,579.289 C328.891,579.688 328.933,580.377 329.383,580.827 L333.556,585 L329.383,589.173 C328.933,589.623 328.891,590.312 329.289,590.711 C329.688,591.109 330.377,591.067 330.827,590.617 L335,586.444 L339.173,590.617 C339.623,591.067 340.312,591.109 340.711,590.711 C341.109,590.312 341.067,589.623 340.617,589.173 L336.444,585 L336.444,585 Z M325,573 L318,577.667 L318,592.333 L325,597 C326.104,597 327,596.104 327,595 L327,575 C327,573.896 326.104,573 325,573 L325,573 Z M311,581 L311,589 C311,590.104 311.896,591 313,591 L316,591 L316,579 L313,579 C311.896,579 311,579.896 311,581 L311,581 Z" sketch:type="MSShapeGroup">
-													</path>
+										<button type="button" class="videoIF__volume__icon" title="volume_button" onclick="toggle_volume()">
+											<svg class="_volume_muted" viewBox="0 -3 30 30" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+													<g sketch:type="MSLayerGroup" transform="translate(-311.000000, -573.000000)" fill="#fff">
+														<path d="M336.444,585 L340.617,580.827 C341.067,580.377 341.109,579.688 340.711,579.289 C340.312,578.891 339.623,578.933 339.173,579.383 L335,583.556 L330.827,579.383 C330.377,578.933 329.688,578.891 329.289,579.289 C328.891,579.688 328.933,580.377 329.383,580.827 L333.556,585 L329.383,589.173 C328.933,589.623 328.891,590.312 329.289,590.711 C329.688,591.109 330.377,591.067 330.827,590.617 L335,586.444 L339.173,590.617 C339.623,591.067 340.312,591.109 340.711,590.711 C341.109,590.312 341.067,589.623 340.617,589.173 L336.444,585 L336.444,585 Z M325,573 L318,577.667 L318,592.333 L325,597 C326.104,597 327,596.104 327,595 L327,575 C327,573.896 326.104,573 325,573 L325,573 Z M311,581 L311,589 C311,590.104 311.896,591 313,591 L316,591 L316,579 L313,579 C311.896,579 311,579.896 311,581 L311,581 Z" sketch:type="MSShapeGroup">
+														</path>
+													</g>
 												</g>
-											</g>
-										</svg>
-										<svg class="_volume_on" viewBox="0 -0.5 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-											<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-												<g sketch:type="MSLayerGroup" transform="translate(-209.000000, -573.000000)" fill="#fff">
-													<path d="M228,578.101 L228,580.101 C230.282,580.564 232,582.581 232,585 C232,587.419 230.282,589.436 228,589.899 L228,591.899 C231.388,591.41 234,588.523 234,585 C234,581.477 231.388,578.59 228,578.101 L228,578.101 Z M209,581 L209,589 C209,590.104 209.896,591 211,591 L214,591 L214,579 L211,579 C209.896,579 209,579.896 209,581 L209,581 Z M223,573 L216,577.667 L216,592.333 L223,597 C224.104,597 225,596.104 225,595 L225,575 C225,573.896 224.104,573 223,573 L223,573 Z" sketch:type="MSShapeGroup">
-													</path>
+											</svg>
+											<svg class="_volume_on" viewBox="0 -0.5 25 25" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+												<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+													<g sketch:type="MSLayerGroup" transform="translate(-209.000000, -573.000000)" fill="#fff">
+														<path d="M228,578.101 L228,580.101 C230.282,580.564 232,582.581 232,585 C232,587.419 230.282,589.436 228,589.899 L228,591.899 C231.388,591.41 234,588.523 234,585 C234,581.477 231.388,578.59 228,578.101 L228,578.101 Z M209,581 L209,589 C209,590.104 209.896,591 211,591 L214,591 L214,579 L211,579 C209.896,579 209,579.896 209,581 L209,581 Z M223,573 L216,577.667 L216,592.333 L223,597 C224.104,597 225,596.104 225,595 L225,575 C225,573.896 224.104,573 223,573 L223,573 Z" sketch:type="MSShapeGroup">
+														</path>
+													</g>
 												</g>
-											</g>
-										</svg>
-										<div class="videoIF__volume__num txt">0</div>
-										<div class="videoIF__volume__mouse"></div>
-										<div class="videoIF__volume__value"></div>
-										<div class="videoIF__volume__forMouse"></div>
+											</svg>
+										</button>
+										<div class="videoIF__volume__race">
+											<div class="videoIF__volume__race__num txt">0</div>
+											<div class="videoIF__volume__race__mouse"></div>
+											<div class="videoIF__volume__race__value"></div>
+											<div class="videoIF__volume__race__forMouse"></div>
+										</div>
 									</div>
 									<button type="button" class="videoIF__button videoIF__buttonTglScrList" title="TglScrList" onclick="toggle_screenshots_list()">
 										<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -665,6 +672,7 @@
 	<script type="text/javascript" src="scripts/script.js"></script>
     <script type="text/javascript" src="scripts/header_bg.js"></script>
     <script type="text/javascript" src="scripts/header_catalog.js"></script>
+    <script type="text/javascript" src="scripts/notification.js"></script>
 	<script type="text/javascript" src="scripts/video_player.js"></script>
 	<script type="text/javascript" src="scripts/script_gameCard.js"></script>
 </body>
