--- a/game.html
+++ b/game.html
@@ -559,7 +559,55 @@
 					</div>
 				</div>
 			</div>
-			<section class="editions" id="edition">
+			<section class="additions" id="additions">
+				<div class="additions__side additions__side_dlc" id="additions-dlc">
+					<div class="additions__side__header">
+						<h3 class="txt">Дополнения</h3>
+					</div>
+					<div class="additions__side__grid additions__side__grid_dlc">
+						<!-- <div class="dlc txt">
+							<div class="dlc__title">Title Of The DLC</div>
+							<div class="dlc__right">
+								<div class="dlc__right__prices">
+									<div class="dlc__right__prices__old">1600 ₽</div>
+									<div class="dlc__right__prices__new">1400 ₽</div>
+								</div>
+								<div class="dlc__right__buttons">
+									<button type="button" class="dlc__right__buttons__button dlc__right__buttons__button_" onclick="" title="В избранное">
+										<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M12 19.7501C11.8012 19.7499 11.6105 19.6708 11.47 19.5301L4.70001 12.7401C3.78387 11.8054 3.27072 10.5488 3.27072 9.24006C3.27072 7.9313 3.78387 6.6747 4.70001 5.74006C5.6283 4.81186 6.88727 4.29042 8.20001 4.29042C9.51274 4.29042 10.7717 4.81186 11.7 5.74006L12 6.00006L12.28 5.72006C12.739 5.25606 13.2857 4.88801 13.8883 4.63736C14.4909 4.3867 15.1374 4.25845 15.79 4.26006C16.442 4.25714 17.088 4.38382 17.6906 4.63274C18.2931 4.88167 18.8402 5.24786 19.3 5.71006C20.2161 6.6447 20.7293 7.9013 20.7293 9.21006C20.7293 10.5188 20.2161 11.7754 19.3 12.7101L12.53 19.5001C12.463 19.5752 12.3815 19.636 12.2904 19.679C12.1994 19.7219 12.1006 19.7461 12 19.7501ZM8.21001 5.75006C7.75584 5.74675 7.30551 5.83342 6.885 6.00505C6.4645 6.17669 6.08215 6.42989 5.76001 6.75006C5.11088 7.40221 4.74646 8.28491 4.74646 9.20506C4.74646 10.1252 5.11088 11.0079 5.76001 11.6601L12 17.9401L18.23 11.6801C18.5526 11.3578 18.8086 10.9751 18.9832 10.5538C19.1578 10.1326 19.2477 9.68107 19.2477 9.22506C19.2477 8.76905 19.1578 8.31752 18.9832 7.89627C18.8086 7.47503 18.5526 7.09233 18.23 6.77006C17.9104 6.44929 17.5299 6.1956 17.1109 6.02387C16.6919 5.85215 16.2428 5.76586 15.79 5.77006C15.3358 5.76675 14.8855 5.85342 14.465 6.02505C14.0445 6.19669 13.6621 6.44989 13.34 6.77006L12.53 7.58006C12.3869 7.71581 12.1972 7.79149 12 7.79149C11.8028 7.79149 11.6131 7.71581 11.47 7.58006L10.66 6.77006C10.3395 6.44628 9.95791 6.18939 9.53733 6.01429C9.11675 5.83919 8.66558 5.74937 8.21001 5.75006Z" fill="#fff"/>
+										</svg>
+									</button>
+									<button type="button" class="dlc__right__buttons__button dlc__right__buttons__button_" onclick="" title="В корзину">
+										<svg viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+											<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+												<g transform="translate(-74.000000, -239.000000)">
+													<g transform="translate(74.000000, 239.000000)">
+														<rect x="0" y="0" width="24" height="24"></rect>
+														<path d="M2.5,3.5 L4.57364,3.5 C4.81929,3.5 5.02855,3.67844 5.06736,3.921 L6.73058,14.3158 C6.88582,15.286 7.72287,15.9998 8.70546,15.9998 L17.3957,15.9998 C18.3331,15.9998 19.1447,15.3487 19.3481,14.4337 L20.7296,8.21674 C20.8684,7.59222 20.3932,6.9998 19.7534,6.9998 L5.83997,6.9998" stroke="#fff" stroke-width="2" stroke-linecap="round"></path>
+														<circle  stroke="#fff" stroke-width="2" stroke-linecap="round" cx="9.5" cy="21" r="1"></circle>
+														<circle stroke="#fff" stroke-width="2" stroke-linecap="round" cx="16.5" cy="21" r="1"></circle>
+													</g>
+												</g>
+											</g>
+										</svg>
+									</button>
+									<button type="button" class="dlc__right__buttons__button dlc__right__buttons__button_" onclick="">Купить</button>
+								</div>
+							</div>
+						</div> -->
+					</div>
+					<!-- <div class="additions__side__bottom"></div> -->
+				</div>
+				<div class="additions__side additions__side_editions" id="additions-editions">
+					<div class="additions__side__header">
+						<h3 class="txt">Издания</h3>
+					</div>
+					<div class="additions__side__grid additions__side__grid_editions"></div>
+					<!-- <div class="additions__side__bottom"></div> -->
+				</div>
+			</section>
+			<!-- <section class="editions" id="edition">
 				<div class="editions__header">
 					<div class="editions__header__nav" id="editions_nav-dlc" onclick="change_editions_sections('dlc')">
 						<div class="editions__header__nav__text txt">Дополнения</div>
@@ -575,7 +623,7 @@
 						<div class="loadingBlock__point"></div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 			<section class="information information_loading loadingContent">
 				<div class="information__description information_block" >
 					<h2 class="txt">Описание</h2>
@@ -593,8 +641,18 @@
 				</div>
 			</section>
 			<section class="similar similar_loading loadingContent" id="similar">
-				<h3 class="txt">Похожие игры</h3>
-				<div class="similar__grid gridHorizontalGames" id="content">
+				<div class="similar__header">
+					<div class="similar__header__nav similar__header__nav_active" id="similar_nav-similar" onclick="change_similar_sections('similar')">
+						<div class="similar__header__nav__text txt">Похожие</div>
+					</div>
+					<div class="similar__header__nav" id="similar_nav-series" onclick="change_similar_sections('series')">
+						<div class="similar__header__nav__text txt">Игры серии</div>
+					</div>
+				</div>
+				<div class="similar__grid similar__grid_active gridHorizontalGames" id="similar-similar">
+					
+				</div>
+				<div class="similar__grid gridHorizontalGames" id="similar-series">
 					
 				</div>
 			</section>
