--- a/catalog.html
+++ b/catalog.html
@@ -302,7 +302,7 @@
 	<div class="blackoutBlock fixed-zero" onclick="open_catalogNavs()"></div>
 	
 	<main id="main">
-		<div class="inner inner_catalog">
+		<div class="inner inner_w1405p100">
             <form class="formFilters" action="" name="form_filter">
 				<div class="formFilters__row">
 					<div class="formFilters__sortingBlock">
